--- a/app/src/content/center/centerContent.tpl.html
+++ b/app/src/content/center/centerContent.tpl.html
@@ -59,23 +59,25 @@
                 </entry-html-content>
             </div>
             <div class="il-content-center-body-section panel-body" ng-if="tabSelected.type!='html'">
-                <div ng-if="subTabSelected.type=='less'">
-                    <entry-less-content
-                            item="subTabSelected">
-                    </entry-less-content>
-                </div>
-                <div ng-if="subTabSelected.type=='html'">
-                    <entry-html-content
-                            item="subTabSelected"
-                            tab-path="{{tabSelected.path}}">
-                    </entry-html-content>
-                </div>
-                <div ng-if="subTabSelected.type!='html' && subTabSelected.type!='less'">
-                    <entry-json-content
-                            entry="subTabSelected"
-                            index="{{subTabSelected.index}}"
-                            tab-path="{{tabSelected.path}}">
-                    </entry-json-content>
+                <div ng-switch on="subTabSelected.type">
+                    <div ng-switch-when="less">
+                        <entry-less-content
+                                item="subTabSelected">
+                        </entry-less-content>
+                    </div>
+                    <div ng-switch-when="html">
+                        <entry-html-content
+                                item="subTabSelected"
+                                tab-path="{{tabSelected.path}}">
+                        </entry-html-content>
+                    </div>
+                    <div ng-switch-default>
+                        <entry-json-content
+                                entry="subTabSelected"
+                                index="{{subTabSelected.index}}"
+                                tab-path="{{tabSelected.path}}">
+                        </entry-json-content>
+                    </div>
                 </div>
             </div>
     </div>
