--- a/app/src/content/center/entry/entryJsonContent.tpl.html
+++ b/app/src/content/center/entry/entryJsonContent.tpl.html
@@ -2,8 +2,9 @@
 <div class="alert alert-{{stateType}}" role="alert">
     <p class="lead">State: {{entry.state}}</p>
     <p ng-if="entry.guiClass">GUI-Class: {{entry.guiClass}}</p>
+    <p ng-if="!renderHtml">Abstract Component</p>
 </div>
-<div class="panel panel-default">
+<div class="panel panel-default" ng-if="renderHtml">
     <div id="{{index}}-html-example" class="uiks-content-demo-container panel-body">
         <iframe id='{{index}}-iframe-example' src="{{htmlPath}}" width="100%" height="500px" ng-if="entry.isIframe"> </iframe>
         <div ng-include src="htmlPath" onload="onHtmlLoaded()" ng-if="!entry.isIframe"></div>
@@ -70,29 +71,5 @@
             </div>
         </div>
     </div>
-    <div class="panel panel-default" ng-if="entry.usedBy || entry.uses">
-        <div class="panel-heading" role="tab" id="headingSix">
-            <h4 class="panel-title">
-                <a class="collapsed" data-toggle="collapse" data-parent="#accordion{{index}}" data-target="#collapseSix{{index}}" aria-expanded="false" aria-controls="collapseSix">
-                    Relations
-                </a>
-            </h4>
-        </div>
-        <div id="collapseSix{{index}}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingsix">
-            <div class="panel-body">
-                Used By:
-                <p ng-if="entry.usedBy">
-                    <ul ng-repeat="(id,usage) in entry.usedBy">
-                        <li>{{usage}}</li>
-                    </ul>
-                </p>
-                Uses:
-                <p ng-if="entry.uses">
-                    <ul ng-repeat="(id,usage) in entry.uses">
-                        <li>{{usage}}</li>
-                    </ul>
-                </p>
-            </div>
-        </div>
-    </div>
+    <entry-relations entry="entry"></entry-relations>
 </div>
