--- a/app/src/content/center/entry/entryLessContent.tpl.html
+++ b/app/src/content/center/entry/entryLessContent.tpl.html
@@ -9,7 +9,7 @@
         </less-variable>
     </div>
 </div>
-<div ng-if="item.variables.bootstrap"">
+<div ng-if="item.variables.bootstrap">
     <h4>Bootstrap</h4>
     <div ng-repeat="(id,variable) in item.variables.bootstrap">
         <less-variable
