--- a/app/data/information/informationOverview/overviewWorkflows/z_workflowTemplate.html
+++ b/app/data/information/informationOverview/overviewWorkflows/z_workflowTemplate.html
@@ -18,6 +18,7 @@
         "id": "id of the new component, entries will be sorted according the component id. All components must have as first class in the dom the name of the il-{id-of-component-separeted-by-hyphens} (REQUIRED).",
         "title": "Name of the component, appearing in the tab section (REQUIRED). The name should match the id but may reverse the order of words if making the subject more readable.",
         "description": "Some useful description. The context of where and how to use this component should be made clear. (REQUIRED)",
+        "context": "Description of the context, where this element is to be used (REQUIRED)",
         "state": "State of the component (see 'States' for more information about states) (REQUIRED)",
         "lessVariables (OPTIONAL)":
         [
@@ -45,6 +46,7 @@
         "id": "idOfComponentCamelCase",
         "title": "Name of Component",
         "description": "Some useful description",
+        "context": "description of the context, where this element is to be used",
         "state": "Implemented for 5.0",
         "lessVariables":
         [
