--- a/app/src/content/sidebars/sidebars.tpl.html
+++ b/app/src/content/sidebars/sidebars.tpl.html
@@ -16,7 +16,7 @@
                 >
             <search ng-controller="SearchController"
                     categories="searchCategories"
-                    on-search="onSearch()"
+                    on-search="doSearch()"
                     selected-element="searchCategories.selectedElement"
                     >
             </search>
