--- a/app/data/collections/dialogsCategory/dialogsModals/modal.html
+++ b/app/data/collections/dialogsCategory/dialogsModals/modal.html
@@ -11,7 +11,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">x</span>
                 </button>
-                <h4 class="modal-title" id="il_demo_modal_with_form_label">Modal title</h4>
+                <h4 class="il-modal-title modal-title" id="il_demo_modal_with_form_label">Modal title</h4>
             </div>
             <form method="post" name="cmd">
                 <div class="modal-body">
