--- a/app/data/information/informationAccessability/accessabilityGuidelines/accessabilityAriaRoles.html
+++ b/app/data/information/informationAccessability/accessabilityGuidelines/accessabilityAriaRoles.html
@@ -1,1 +1,9 @@
-Todo
+<p>
+    Bootstrap makes heavy use of the <a href="http://www.w3.org/TR/wai-aria/roles">WAI-ARIA roles model</a>.
+    If you keep reusing Bootstrap components, most of aria roles will be already proposed by bootstrap. If you
+    propose your own DOM-Structure you must assign the proper aria roles to your elements.
+</p>
+<p>
+    An overview of all the WAI-ARIA role:
+</p>
+<a href="http://www.w3.org/TR/wai-aria/rdf_model.svg"><img src="http://www.w3.org/TR/wai-aria/rdf_model.svg" alt="aria-roles" class="img-thumbnail"/></a>
