--- a/app/data/information/informationAccessability/accessabilityOverview/accessabilityOverview.html
+++ b/app/data/information/informationAccessability/accessabilityOverview/accessabilityOverview.html
@@ -1,3 +1,8 @@
-<p>Todo
+<p>
+    The main document concerning accessability in ILIAS is the <a href="http://www.ilias.de/docu/goto_docu_pg_9865_459.html">"Accessability Guidelines"</a> document on ilias.de
+Make sure to also consult the section on <a href="http://localhost:7979/#/content/information/informationAccessability/accessabilityGuidelines/accessabilityAriaRoles">Aria Roles</a>.
 </p>
-
+<p>
+You MUST also check carefully the comments on the <a href="http://getbootstrap.com/getting-started/#accessibility">Bootstrap page</a> if using elements presented there. Such comments
+    are usaly marked orange or red and are named with "making XY accessible" or similar.
+</p>
