--- a/app/data/information/informationOverview/overviewOverview/overviewOverview.html
+++ b/app/data/information/informationOverview/overviewOverview/overviewOverview.html
@@ -1,8 +1,9 @@
 <p>The UI-Kitchen-Sinks represents the specification, classification, documentation and illustration of UI-Elements in ILIAS.
     It should help:
 <ul>
-    <li>Developers to find the right UI-Element for their need</li>
+    <li>Developers to find the right UI-Element for their context</li>
     <li>Customers to check for available resources to fullfill their needs</li>
+    <li>Designers to find the the correct less variables to adapt</li>
     <li>Testers to check if a feature is implemented according to UI-Guidelines</li>
     <li>End-Users to have a more streamlined user experience with ILIAS</li>
 </ul>
