--- a/app/data/information/informationOverview/overviewTerms/termsCategories.html
+++ b/app/data/information/informationOverview/overviewTerms/termsCategories.html
@@ -2,11 +2,11 @@
 </p>
 <dl class="dl-horizontal">
     <dt>Elements</dt>
-    <dd>Elements describe basic functionalities or semantic classes. They are often combined together in collections. Examples are single form input elements, fonts, colors, buttons etc.</dd>
+    <dd>Elements describe basic functionalities or semantic classes. They are often combined together in collections. Examples are fonts, colors, buttons etc.</dd>
     <dt>Collections</dt>
-    <dd>Collections describe combinations of elements. They mostly form tools (such as calendars, info-boxes, forms and tables) that are reused in different places of ILIAS.</dd>
-    <dt>View</dt>
-    <dd>A view is an arrangement of collections and elements and describes a complete functionality in ILIAS (such as the permissions screen or the personal desktop)</dd>
+    <dd>Collections describe combinations of elements. They mostly form tools such as calendars, info-boxes, forms and tables that are reused in different places of ILIAS.</dd>
     <dt>Layouts</dt>
-    <dd>Layouts describe ways to arrange elements and tools to form a complete view.</dd>
+    <dd>Layouts describe ways to arrange elements and tools to form a complete view. Layouts are reusable patterns for a given
+    context. Most of the layouts are heavily inspired from the great work of <a href="http://designinginterfaces.com/">Jennifer Tidwell</a>.
+    </dd>
 </dl>
