DOM only shown if existing

--- a/app/src/content/center/entry/entryJsonContent.tpl.html
+++ b/app/src/content/center/entry/entryJsonContent.tpl.html
@@ -19,7 +19,7 @@
     </div>
 </div>
 <div class="panel-group" id="accordion{{index}}" role="tablist" aria-multiselectable="true">
-    <div class="panel panel-default">
+    <div class="panel panel-default" ng-if="renderHtml">
         <div class="panel-heading" role="tab" id="headingZero">
             <h4 class="panel-title">
                 <a data-toggle="collapse" data-parent="#accordion{{index}}" data-target="#collapseZero{{index}}" aria-expanded="true" aria-controls="collapseZero">
