--- a/app/src/content/center/entry/entryJsonContent.tpl.html
+++ b/app/src/content/center/entry/entryJsonContent.tpl.html
@@ -10,12 +10,17 @@
 <div class="alert alert-{{stateType}}" role="alert">
     <p class="lead">State: {{entry.state}}</p>
     <p ng-if="entry.guiClass">GUI-Class: {{entry.guiClass}}</p>
-    <p ng-if="!renderHtml">Abstract Component</p>
+    <p ng-if="entry.type == 'abstract'">Abstract Component</p>
 </div>
 <div class="panel panel-default" ng-if="renderHtml">
     <div id="{{index}}-html-example" class="uiks-content-demo-container panel-body">
         <iframe id='{{index}}-iframe-example' src="{{htmlPath}}" width="100%" height="500px" ng-if="entry.isIframe"> </iframe>
         <div ng-include src="htmlPath" onload="onHtmlLoaded()" ng-if="!entry.isIframe"></div>
+    </div>
+</div>
+<div class="panel panel-default" ng-if="entry.type == 'png'">
+    <div id="{{index}}-png-example" class="uiks-content-demo-container panel-body">
+        <img class="img-responsive" ng-src="{{pngPath}}" alt="png-example"/>
     </div>
 </div>
 <div class="panel-group" id="accordion{{index}}" role="tablist" aria-multiselectable="true">
