--- a/app/src/content/center/tab/tabsCategories.tpl.html
+++ b/app/src/content/center/tab/tabsCategories.tpl.html
@@ -1,3 +1,3 @@
-<li role="presentation" ng-class="active">
-    <a href="#/content/{{categoryId}}/{{subCategoryId}}/{{tabId}}/{{subTabId}}" role="tab" data-target="{{index+1}}" data-toggle="tab">{{title}}</a>
+<li role="presentation" ng-class="$parent.active" ng-if="visible" >
+    <a href="#/content/{{$parent.categoryId}}/{{$parent.subCategoryId}}/{{$parent.tabId}}/{{$parent.subTabId}}" role="tab" data-target="{{$parent.index+1}}" data-toggle="tab">{{$parent.title}}</a>
 </li>
