--- a/app/src/content/sidebars/blocks/search/search.tpl.html
+++ b/app/src/content/sidebars/blocks/search/search.tpl.html
@@ -3,7 +3,7 @@
         <input id="select2-single-append" class="form-control select2-allow-clear select2-append">
         </input>
         <span class="input-group-btn">
-		    <button ng-click="onSearchClicked()" class="btn btn-default" type="button" data-select2-open="single-append-text">
+		    <button ng-click="onSearchClicked()" class="btn btn-default btn-lg" type="button" data-select2-open="single-append-text">
                 <span class="glyphicon glyphicon-search"></span>
             </button>
 		</span>
