--- a/app/src/header/headerTopNav/headerTopNav.tpl.html
+++ b/app/src/header/headerTopNav/headerTopNav.tpl.html
@@ -4,4 +4,6 @@
             <span class="glyphicon glyphicon-wrench"></span>
         </a>
     </li>
+    <header-top-nav-visibity>
+    </header-top-nav-visibity>
 </ul>
