--- a/app/src/content/center/entry/lessVariable.tpl.html
+++ b/app/src/content/center/entry/lessVariable.tpl.html
@@ -1,6 +1,6 @@
 <div class="alert alert-{{getStateAlert(variable.state)}}" role="alert" data-toggle="popover" placement="bottom" data-target="#{{variable.title}}Usages">
     <p>
-        <strong>{{variable.title}}: </strong>{{variable.description}}
+        <strong>{{variable.title}}: </strong>{{variable.value}}; <span ng-if="variable.description">//{{variable.description}}</span>
     </p>
     <p ng-if="relations">
         Used in:
