less variables visualization update.

--- a/app/src/content/center/entry/entryVisualizationContent.tpl.html
+++ b/app/src/content/center/entry/entryVisualizationContent.tpl.html
@@ -3,9 +3,9 @@
         <input id="visualizationSearch" ng-model="visualizationSearch" autocomplete="on">
         <button type="button"  ng-click="searchNode(visualizationSearch)">Search</button>
     </div>
-    <form>
+    <!--<form>
         <h3> Link threshold 0 </h3>
         <input type="range" id="thersholdSlider" name="points" value="0" min="0" max="3" ng-model="thersholdSlider" ng-change="threshold(thersholdSlider)">
         <h3>3</h3>
-    </form>
+    </form>-->
 </div>
